Style changes and added loader

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </head>
   <body>
     <main>
-      <section class="app-container">
+      <div class="loader-container"><div class="loader"></div></div>
+      <section class="app-container display-none">
         <nav class="side-navbar">
           <div class="card card-navbar">
             <div class="card-image">
@@ -35,6 +36,7 @@
             <p class="time"></p>
           </div>
         </nav>
+        <div class="theme-pallete-container"></div>
         <section class="content-container">
           <div id="dashboard">
             <h1 class="content-heading">Dashboard</h1>
@@ -48,7 +50,6 @@
           <div id="contact" class="display-none">
             <h1 class="content-heading">Contact</h1>
           </div>
-          <div class="theme-pallete-container"></div>
         </section>
       </section>
     </main>
