--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <main>
@@ -25,11 +29,17 @@
 
           <ul class="side-navbar-links">
             <li class="side-navbar-link side-navbar-link__active">
-              <span>Dashboard</span>
+              <span><i class="fa nav-icon fa-area-chart"></i>Dashboard</span>
             </li>
-            <li class="side-navbar-link"><span>About</span></li>
-            <li class="side-navbar-link"><span>Projects</span></li>
-            <li class="side-navbar-link"><span>Contact</span></li>
+            <li class="side-navbar-link">
+              <span> <i class="fa nav-icon fa-user"></i>About</span>
+            </li>
+            <li class="side-navbar-link">
+              <span><i class="fa nav-icon fa-pencil"></i>Projects</span>
+            </li>
+            <li class="side-navbar-link">
+              <span> <i class="fa nav-icon fa-envelope"></i>Contact</span>
+            </li>
           </ul>
 
           <div>
