--- a/index.html
+++ b/index.html
@@ -1,68 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Profile | Kartik Sharma - Software Engineer</title>
-    <link rel="stylesheet" href="./reset.css" />
-    <link rel="stylesheet" href="./index.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-  </head>
-  <body>
-    <main>
-      <div class="loader-container"><div class="loader"></div></div>
-      <section class="app-container display-none">
-        <nav class="side-navbar">
-          <div class="card card-navbar">
-            <div class="card-image">
-              <img src="./images/profile-image.png" />
-            </div>
-            <p class="card-title">Kartik Sharma</p>
-          </div>
-
-          <ul class="side-navbar-links">
-            <li class="side-navbar-link side-navbar-link__active">
-              <span><i class="fa nav-icon fa-area-chart"></i>Dashboard</span>
-            </li>
-            <li class="side-navbar-link">
-              <span> <i class="fa nav-icon fa-user"></i>About</span>
-            </li>
-            <li class="side-navbar-link">
-              <span><i class="fa nav-icon fa-pencil"></i>Projects</span>
-            </li>
-            <li class="side-navbar-link">
-              <span> <i class="fa nav-icon fa-envelope"></i>Contact</span>
-            </li>
-          </ul>
-
-          <div>
-            <p class="time"></p>
-          </div>
-        </nav>
-        <div class="theme-pallete-container"></div>
-        <section class="content-container">
-          <div id="dashboard">
-            <h1 class="content-heading">Dashboard</h1>
-          </div>
-          <div id="about" class="display-none">
-            <h1 class="content-heading">About</h1>
-          </div>
-          <div id="projects" class="display-none">
-            <h1 class="content-heading">Projects</h1>
-          </div>
-          <div id="contact" class="display-none">
-            <h1 class="content-heading">Contact</h1>
-          </div>
-        </section>
-      </section>
-    </main>
-    <script src="./index.js"></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Kartik Sharma Portfolio"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Kartik Sharma</title><link href="/static/css/main.4c9419cf.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,i,a=r[0],c=r[1],f=r[2],p=0,s=[];p<a.length;p++)i=a[p],Object.prototype.hasOwnProperty.call(o,i)&&o[i]&&s.push(o[i][0]),o[i]=0;for(n in c)Object.prototype.hasOwnProperty.call(c,n)&&(e[n]=c[n]);for(l&&l(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,a=1;a<t.length;a++){var c=t[a];0!==o[c]&&(n=!1)}n&&(u.splice(r--,1),e=i(i.s=t[0]))}return e}var n={},o={1:0},u=[];function i(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,i),t.l=!0,t.exports}i.e=function(e){var r=[],t=o[e];if(0!==t)if(t)r.push(t[2]);else{var n=new Promise((function(r,n){t=o[e]=[r,n]}));r.push(t[2]=n);var u,a=document.createElement("script");a.charset="utf-8",a.timeout=120,i.nc&&a.setAttribute("nonce",i.nc),a.src=function(e){return i.p+"static/js/"+({}[e]||e)+"."+{3:"9be7f0ad"}[e]+".chunk.js"}(e);var c=new Error;u=function(r){a.onerror=a.onload=null,clearTimeout(f);var t=o[e];if(0!==t){if(t){var n=r&&("load"===r.type?"missing":r.type),u=r&&r.target&&r.target.src;c.message="Loading chunk "+e+" failed.\n("+n+": "+u+")",c.name="ChunkLoadError",c.type=n,c.request=u,t[1](c)}o[e]=void 0}};var f=setTimeout((function(){u({type:"timeout",target:a})}),12e4);a.onerror=a.onload=u,document.head.appendChild(a)}return Promise.all(r)},i.m=e,i.c=n,i.d=function(e,r,t){i.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},i.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},i.t=function(e,r){if(1&r&&(e=i(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(i.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)i.d(t,n,function(r){return e[r]}.bind(null,n));return t},i.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return i.d(r,"a",r),r},i.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},i.p="/",i.oe=function(e){throw console.error(e),e};var a=this["webpackJsonpportfolio-fe"]=this["webpackJsonpportfolio-fe"]||[],c=a.push.bind(a);a.push=r,a=a.slice();for(var f=0;f<a.length;f++)r(a[f]);var l=c;t()}([])</script><script src="/static/js/2.3e0baf18.chunk.js"></script><script src="/static/js/main.b2e228f8.chunk.js"></script></body></html>
